--- a/docs/images/desktop.ini
+++ b/docs/images/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2025-08-21 144634.png=@Screenshot 2025-08-21 144634,0
 Screenshot 2025-08-21 145035.png=@Screenshot 2025-08-21 145035,0
+Screenshot 2025-08-23 120946.png=@Screenshot 2025-08-23 120946,0
